<resources>
    <string name="app_name">Health In Joy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">error</string>
    <string name="training_category">Категории тренировок</string>
    <string name="training_physical">Физическое здоровье</string>
    <string name="training_intellectual">Интеллектуальное здоровье</string>
    <string name="zero">0</string>
    <string name="zero_date">0 января 00:00</string>
    <string name="notification_channel_name">notificationChannel</string>
    <string name="notification_channel_description">notificationChannelDesc</string>
    <string name="zero_time">00</string>

</resources>