<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.home.HomeFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_weather"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/card_weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/green">

                <TextView
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:text="Загрузка..."/>

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="70dp"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/feelsLike"
                    android:layout_gravity="center"
                    android:textSize="13sp"
                    />

                <Button
                    android:id="@+id/onGPS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:visibility="gone"
                    android:text="Включить"/>
            </androidx.cardview.widget.CardView>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/error"/>

    <TextView
        android:id="@+id/text_training_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shimmer_weather"
        android:layout_marginTop="50dp"
        android:text="@string/training_category"/>

    <LinearLayout
        android:id="@+id/container_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_training_categories"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_physical_training"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/bottom_navigation_colors"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_physical"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="microText sshshhshshhshshshhshshshshhshs"
                tools:ignore="SmallSp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_intellectual_training"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/bottom_navigation_colors"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_intellectual"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="microText sshshhshshhshshshhshshshshhshs"
                tools:ignore="SmallSp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>