<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.train.physical.TrainingFinishFragment"
    android:background="@color/background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        style="@style/Widget.Material3.CardView.Filled"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Вы молодец! Так держать!"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textColor="@color/white"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/training_info"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/trainings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/zero_time" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:text="@string/zero_time" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dropped_calories_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/zero_time" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="Упражнений" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            android:text="Минут" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="Ккал" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="#C4C4C4"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/training_info"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:shadowRadius="0"
        android:text="Заново"
        android:textColor="@color/background"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/training_info"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:shadowRadius="0"
        android:text="Следущее"
        android:textColor="@color/background"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/next"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/white"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Вес: " />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Рост: " />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Сброшено: " />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="end">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dropped_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/zero"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/zero"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/user_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:shadowRadius="0"
        android:text="Завершить"
        android:textColor="@color/background"
        />

</androidx.constraintlayout.widget.ConstraintLayout>